--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,7 @@
 body{
 
 }
-.container{
-	
 
-}
 .ed-bg-blue {
 	background-color: #0B2D56;
 }
@@ -18,7 +15,7 @@ color: white;
 margin:5px 5px;
 }
 .ed-btn-context{
-margin-top: -25px;
+
 }
 .row-eq-height {
   display: -webkit-box;
@@ -45,20 +42,17 @@ margin-top: -25px;
 .sub-list-item {
 	float: left;
 }
-.ed-resize-brand {
-	width: 30%;
-	display: inline-block;
+
+wrapper-left row #context-btn{
+	display:inline-block !important;
 }
 
-.ed-resize-logo {
-	width: 40%;
-	display:inline-block;
-}
 
 .vcenter {
     display: inline-block;
     vertical-align: middle;
     float: none;
+	
 }
 .navbar-default{
 	background-color: #173F64;
@@ -83,6 +77,13 @@ margin-top: -25px;
 }
 
 
+@media (min-width: 992px){
+.container {
+    width: 1030px;
+}	
+
+
+}
 @media (min-width: 768px) and (max-width: 991px){
 
 .ed-resize-brand {
